--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
 </head>
 
 <body>
-    <h1>kim's github homepage RETESTING PUSH COMMANDS
-        
-    </h1>
+    <h1>kim's github homepage test</h1>
 
     <p>hi</p>
     
