--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 
 <body>
-    <h1>kim's github homepage test</h1>
+    <h1>kim's github homepage</h1>
 
     <p>hi</p>
+    <p>does it finally work</p>
     
 </body>
 
