--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <div id="banner">
-            <h1>welcome to kim's github</h1>
+            <h1>welcome to kim's portal page</h1>
             <h2>DES 157A - Interactive Media II - Winter 2023</h2>
             <img src="images/cloud.png" alt="cloud" height="150" class="cloudleft">
             <img src="images/cloud2.png" alt="cloud" height="150" class="cloudright">
@@ -37,7 +37,7 @@
 
             <h2>experiments</h2>
             <ul>
-                <li><a href="#">experiment 1</a></li>
+                <li><a href="exp/exp1.html">experiment 1</a></li>
             </ul>
         </section>
 
@@ -62,10 +62,15 @@
     </main>
     
     <footer>
+        <img src="images/carrot.png" alt="carrot" width="100" id="carrot1">
+        <img src="images/carrot.png" alt="carrot" width="100" id="carrot2">
+        <img src="images/carrot.png" alt="carrot" width="100" id="carrot3">
+        <div class="content">
         <p>designed by kimberly tran ♥</p>
         <address>
-            contact me here! <a href="mailto:&#107;&#109;&#108;&#116;&#114;&#097;&#110;&#064;&#117;&#099;&#100;&#097;&#118;&#105;&#115;&#046;&#101;&#100;&#117;">&#107;&#109;&#108;&#116;&#114;&#097;&#110;&#064;&#117;&#099;&#100;&#097;&#118;&#105;&#115;&#046;&#101;&#100;&#117;</a>
+            <a href="mailto:&#107;&#109;&#108;&#116;&#114;&#097;&#110;&#064;&#117;&#099;&#100;&#097;&#118;&#105;&#115;&#046;&#101;&#100;&#117;">contact me!</a>
         </address>
+        </div>
     </footer>
 </body>
 
