--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
     </main>
     
     <footer>
-        <img src="images/carrot.png" alt="carrot" width="100" id="carrot1">
-        <img src="images/carrot.png" alt="carrot" width="100" id="carrot2">
-        <img src="images/carrot.png" alt="carrot" width="100" id="carrot3">
+        <img src="images/carrot.png" alt="carrot" width="100" class="carrot1">
+        <img src="images/carrot.png" alt="carrot" width="100" class="carrot2">
+        <img src="images/carrot.png" alt="carrot" width="100" class="carrot3">
         <div class="content">
-        <p>designed by kimberly tran ♥</p>
-        <address>
-            <a href="mailto:&#107;&#109;&#108;&#116;&#114;&#097;&#110;&#064;&#117;&#099;&#100;&#097;&#118;&#105;&#115;&#046;&#101;&#100;&#117;">contact me!</a>
-        </address>
+            <p>designed by kimberly tran ♥</p>
+            <address>
+                <a href="mailto:&#107;&#109;&#108;&#116;&#114;&#097;&#110;&#064;&#117;&#099;&#100;&#097;&#118;&#105;&#115;&#046;&#101;&#100;&#117;">contact me!</a>
+            </address>
         </div>
     </footer>
 </body>
