--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <div id="banner">
-            <h1>welcome to kim's portal page</h1>
+            <h1 class="title">welcome to kim's portal page</h1>
             <h2>DES 157A - Interactive Media II - Winter 2023</h2>
             <img src="images/cloud.png" alt="cloud" height="150" class="cloudleft">
             <img src="images/cloud2.png" alt="cloud" height="150" class="cloudright">
