--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <div id="banner">
-            <h1 class="title">welcome to kim's portal page</h1>
+            <h1 class="title">welcome to kim's carrot farm</h1>
             <h2>DES 157A - Interactive Media II - Winter 2023</h2>
             <img src="images/cloud.png" alt="cloud" height="150" class="cloudleft">
             <img src="images/cloud2.png" alt="cloud" height="150" class="cloudright">
@@ -29,7 +29,7 @@
         <section>
             <h2>studios</h2>
             <ul>
-                <li><a href="#">learning journal</a></li>
+                <li><a href="journal/index.html">learning journal</a></li>
                 <li><a href="#">mad libs 2.0</a></li>
                 <li><a href="#">every picture</a></li>
                 <li><a href="#">game on!</a></li>
@@ -38,6 +38,7 @@
             <h2>experiments</h2>
             <ul>
                 <li><a href="exp/exp1.html">experiment 1</a></li>
+                <li><a href="exp/exp2.html">experiment 2</a></li>
             </ul>
         </section>
 
