learning journal update

--- a/journal/index.html
+++ b/journal/index.html
@@ -21,9 +21,7 @@
     
     <main>
         <article>
-            <div class="cloud">
-                <date>1/27/2022</date>
-            </div>
+            <date>01-27-2022</date>
             <div class="content">
                 <h2>Best Practices for Form Design</h2>
                 <p>From reading the <a href="https://uxdesign.cc/best-practices-for-form-design-ff5de6ca8e5f">Best Practices for Form Design</a> article, I’ve learned that like with all user experience focused design, we want to help users achieve their goals in the most easy and enjoyable way. The article mentioned common tactics such as easing users into the process by placing simpler questions upfront, and making sure to put clear labels and placeholder text to make users do the least amount of work. It was helpful to see these ideas reinforced, and because we had just learned about the HTML form element, I was able to make connections between how to use the "label" and "input tags we learned about to implement these best practices.</p>
