learning journal post 2 upload

--- a/journal/index.html
+++ b/journal/index.html
@@ -21,7 +21,16 @@
     
     <main>
         <article>
-            <date>01-27-2022</date>
+            <date>02-04-2023</date>
+            <div class="content">
+                <h2>Overlay and Modal Design</h2>
+                <p>I hadn’t really realized it before, but it really is true how modals and overlays in today’s world have become more of a “dreaded pop-up window.” I myself have encountered long and frustrating modals that often get me to think “why is this even in a modal?” While there are benefits to using overlays as the article mentioned (grabbing the user’s attention, conveying urgent information, etc.), reading the two articles on overlay design reiterated the idea of designing all things with intention. When thinking of when to use overlays, one should consider whether it is actually necessary by considering for who, what, why, and where it is being used. </p>
+                <p>The article also provided a lot of helpful best practices in the case that using a modal/overlay is appropriate. For example, trying to only use overlays when they are user initiated or considering how modals might obstruct mobile users can help to minimize confusion and frustration. Other best practices I’ll be sure to reference include creating clear labels for titles and buttons to clearly communicate where the user is and what action the user is about to perform to not only reduce confusion but build trust. When sites have confusing pop-ups and navigation, I often feel that it is less trustworthy and that I need to make sure I don’t click on anything weird. As a user, I’ve encounter a lot of the issues mentioned in the articles, and while I never gave it too much thought before, I’ll now be able to keep these in mind when taking on any modal and overlay design.</p>
+            </div>
+        </article>
+
+        <article>
+            <date>01-27-2023</date>
             <div class="content">
                 <h2>Best Practices for Form Design</h2>
                 <p>From reading the <a href="https://uxdesign.cc/best-practices-for-form-design-ff5de6ca8e5f">Best Practices for Form Design</a> article, I’ve learned that like with all user experience focused design, we want to help users achieve their goals in the most easy and enjoyable way. The article mentioned common tactics such as easing users into the process by placing simpler questions upfront, and making sure to put clear labels and placeholder text to make users do the least amount of work. It was helpful to see these ideas reinforced, and because we had just learned about the HTML form element, I was able to make connections between how to use the "label" and "input" tags we learned about to implement these best practices.</p>
