--- a/journal/index.html
+++ b/journal/index.html
@@ -21,6 +21,16 @@
     
     <main>
         <article>
+            <date>02-08-2023</date>
+            <div class="content">
+                <h2>Visual Thinking Strategies Research</h2>
+                <p>I really loved to see how the simple “What’s Going On” activity has been so helpful for teaching close reading and visual thinking skills to other students. It’s a much more easy and unintimidating way to start practicing these skills than by doing a typical assignment. Like the article mentioned, I also oftentimes skim things when they might take more attention to fully absorb. This probably leads me to not being able to fully understand what an image or text has to offer. Thinking of other visuals and texts in the same manner as in the “What’s Going On” activity might help me take a step back more often and really take the time to fully look at something.</p>
+                <p>Furthermore, I found that the three questions created by Visual Thinking Strategies are ones I can keep in mind to help me remember to take a step further and think of how I can find evidence to support my thoughts. I think this is a skill that will be useful not only in a visual sense but in my other classes where more text is more heavily involved as well.</p>
+                <p>After looking on the <a href="https://www.awwwards.com/">Awwwards.com</a> website, I came across the Site of the Day for February 7, 2023. The site titled <a href="https://summer-afternoon.vlucendo.com/">Summer Afternoon</a> by Vicente Lucendo was a super cool interactive website that was almost game-like. The user is able to walk through an interactive town made up of 3D artwork. While there may not be a super deep backstory to this 3D generated town, I was able to practice the visual thinking strategies through exploring the different aspects of the town and thinking about why certain design decisions were made. It was nice to be able to apply the visual thinking skills in an interactive mode. </p>
+            </div>
+        </article>
+
+        <article>
             <date>02-04-2023</date>
             <div class="content">
                 <h2>Overlay and Modal Design</h2>
