visual thinking analysis journal upload

--- a/journal/index.html
+++ b/journal/index.html
@@ -21,12 +21,35 @@
     
     <main>
         <article>
+            <date>02-15-2023</date>
+            <div class="content">
+                <h2>Visual Thinking Analysis</h2>
+                <div class="images">
+                    <figure>
+                        <img src="images/walldecor.png" alt="wall decor" height="260">
+                        <figcaption>Figure 1: Kimberly Tran, 2023</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="images/des157brenda.png" alt="shelf illustration" height="260">
+                        <figcaption>Figure 2: Brenda Padron</figcaption>
+                    </figure>
+                </div>
+
+                <p>The image on the left (Figure 1) is of the wall decor above my desk! A lot of these items and pictures I’ve collected represent parts of my memories, personality, and interests. The variety of items include many different shapes, colors, materials, and express different emotions — from the shine of the polaroid photos, to the pastel colors of the different prints. Just by looking at the wall, you wouldn’t know how long I’ve been collecting these different prints and knick knacks, how I got them, or how they relate to me personally. For example, The sticker in the middle with pink graphic words reading “dreamin’ of summer daze” is from Dutch Bros. Since moving to Davis, I have lived pretty close by to the store and have made it a goal to collect as many of their monthly stickers as I can. Throughout the year, I’ve able to treat myself to my favorite drinks or share the experience with others on these days.</p>
+                <p>All of these different elements help tell the viewer a little bit more about who I am and what I’m about. For some, it may sound a bit trivial to collect something like stickers from a coffee shop, but to me, it’s a simple joy that I’ve really loved about my time in Davis.</p>
+
+                <p>For my classmate’s image on the right (Figure 2), I get a similar feel in that the items on the bookshelf can tell me a lot about what types of activities or items this person enjoys. The image uses a lot of muted colors, but there is also a great variety of colors. I really love the subtleness of the Christmas/string lights that wrap around part of the structure; they have a slightly bright saturation than the other items on the bookshelf which helps them still stand out. I also really enjoy the playfulness and gracefulness in a lot of the spatial relations between the objects, from some items being in front of others, to items leaning against others, etc.</p>
+                <p>Some of the obvious aspects of the piece could include that this is likely a bookshelf this person has in their home. It looks like there are a lot of personal knick knacks on the shelves, some of which that they may have collected from where they have traveled or visited. On the other hand, many of the items are subtle but probably carry a lot of meaning. For example, I’m curious about the little, orange, cat-looking item on the bottom right shelf (as well as many of the other figurines and books around). Are the lights on the shelf there for the season, or are they left year round for decoration? Things like this can say a lot about a person and could definitely be expanded on more to create a super interesting story.</p>
+            </div>
+        </article>
+
+        <article>
             <date>02-08-2023</date>
             <div class="content">
                 <h2>Visual Thinking Strategies Research</h2>
                 <p>I really loved to see how the simple “What’s Going On” activity has been so helpful for teaching close reading and visual thinking skills to other students. It’s a much more easy and unintimidating way to start practicing these skills than by doing a typical assignment. Like the article mentioned, I also oftentimes skim things when they might take more attention to fully absorb. This probably leads me to not being able to fully understand what an image or text has to offer. Thinking of other visuals and texts in the same manner as in the “What’s Going On” activity might help me take a step back more often and really take the time to fully look at something.</p>
                 <p>Furthermore, I found that the three questions created by Visual Thinking Strategies are ones I can keep in mind to help me remember to take a step further and think of how I can find evidence to support my thoughts. I think this is a skill that will be useful not only in a visual sense but in my other classes where more text is more heavily involved as well.</p>
-                <p>After looking on the <a href="https://www.awwwards.com/">Awwwards.com</a> website, I came across the Site of the Day for February 7, 2023. The site titled <a href="https://summer-afternoon.vlucendo.com/">Summer Afternoon</a> by Vicente Lucendo was a super cool interactive website that was almost game-like. The user is able to walk through an interactive town made up of 3D artwork. While there may not be a super deep backstory to this 3D generated town, I was able to practice the visual thinking strategies through exploring the different aspects of the town and thinking about why certain design decisions were made. It was nice to be able to apply the visual thinking skills in an interactive mode. </p>
+                <p>After looking on the <a href="https://www.awwwards.com/">Awwwards.com</a> website, I came across the Site of the Day for February 7, 2023. The site titled <a href="https://summer-afternoon.vlucendo.com/">Summer Afternoon</a> by Vicente Lucendo was a super cool interactive website that was almost game-like. The user is able to walk through an interactive town made up of 3D artwork. While there may not be a super deep backstory to this 3D generated town, I was able to practice the visual thinking strategies through exploring the different aspects of the town and thinking about why certain design decisions were made. It was nice to be able to apply the visual thinking skills in an interactive mode.</p>
             </div>
         </article>
 
