--- a/studio2/index.html
+++ b/studio2/index.html
@@ -23,7 +23,7 @@
     </header>
 
     <div id="container">
-        <img src="images/main.JPG" alt="wall decor" width="1000" class="start" id="mainimg">
+        <img src="images/main.jpg" alt="wall decor" width="1000" class="start" id="mainimg">
         <div id="dutchbros"></div>
         <div id="colorguard"></div>
         <div id="kirby"></div>
