game design journal

--- a/journal/index.html
+++ b/journal/index.html
@@ -21,6 +21,15 @@
     
     <main>
         <article>
+            <date>03-1-2023</date>
+            <div class="content">
+                <h2>Game Design Research</h2>
+                <p>I enjoyed reading Amir Dori’s article on <a href="https://uxplanet.org/game-design-ux-best-practices-guide-4a3078c32099">Game Design UX Best Practices</a>, as games and game design is something that has always been pretty interesting to me. When I first think of game design, I usually think about the design of the actual gameplay itself, however there are plenty of other interactions made outside of the actual gameplay that designers design very meticulously. The best practices in the article focused on a lot more subtle design choices that come with interactions in mobile games. I found it really interesting to see how much thought is put into elements such as the placements of certain game visuals or the color choices for certain buttons; however, this also wasn’t very surprising as this type of thought and detail is put into almost all applications we use nowadays.</p>
+                <p>Something the article mentioned that I hadn’t really heard about before was “dark UX.” While the article provided context on the idea, I looked a bit further into it and learned that dark UX is basically when designers create experiences that push users to benefit the company rather than the user. In game design, it seems obvious that companies might need to implement some dark UX to increase profits, etc., but when seeing these patterns in other sites and contexts, I never really gave the idea a label. I think I will now be more aware of when I see dark UX in games and other places.</p>
+            </div>
+        </article>
+
+        <article>
             <date>02-15-2023</date>
             <div class="content">
                 <h2>Visual Thinking Analysis</h2>
