--- a/studio3/index.html
+++ b/studio3/index.html
@@ -54,8 +54,8 @@
     </section>
 
     <section id="maingame" class="hidden">
-        <p id="playerOneName">PLAYER 1: </p>
-        <p id="playerTwoName">PLAYER 2: </p>
+        <p id="playerOneName">PLAYER 1 </p>
+        <p id="playerTwoName">PLAYER 2 </p>
         <img src="images/penguin1.png" alt="penguin" width="160" id="penguin1">
         <img src="images/penguin2.png" alt="penguin" width="160" id="penguin2">
         <div id="game"></div>
@@ -65,6 +65,11 @@
         <div id="score"></div>
         <div id="gamecontrol"></div>
     </section> 
+
+    <footer>
+        <p><a href="sources.html">AUDIO SOURCES</a></p>
+        <p><a href="https://validator.w3.org/check?uri=referer">VALID HTML</a></p>
+    </footer>
     
 </body>
 </html>
