--- a/final/version2/index.html
+++ b/final/version2/index.html
@@ -16,7 +16,7 @@
     <link href="styles.css" rel="stylesheet">
     <script src="script.js" defer></script>
 
-    <title>game on!: penguin hot coco</title>
+    <title>game on!: marshmallow madness</title>
 </head>
 <body>
     <header>
