user test results 2

--- a/final/usertest.html
+++ b/final/usertest.html
@@ -20,8 +20,8 @@
 
     <nav>
         <ul>
-            <li><a href="#observations" class="selected">Project Summary</a></li>
-            <li><a href="#implementation">Comparison Project 1</a></li>
+            <li><a href="#observations" class="selected">User Test Observations</a></li>
+            <li><a href="#implementation">Next Steps</a></li>
         </ul>
     </nav>
 
