final project upload

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <section>
             <h2>final</h2>
             <ul>
-                <li><a href="#">final project</a></li>
+                <li><a href="final/finalproject/index.html">final project</a></li>
             </ul>
         </section>
         
